--- a/src/ServiceStack.Azure/ServiceStack.Azure.Core.csproj
+++ b/src/ServiceStack.Azure/ServiceStack.Azure.Core.csproj
@@ -14,7 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="ServiceStack.Core" Version="$(Version)" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+    <PackageReference Include="System.Linq.Async" Version="4.1.1" />
   </ItemGroup>
 
 
