--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,22 +1,29 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "0.1.0",
+    "version": "2.0.0",
     "command": "dotnet",
     "options": {
         "env": {
             "FrameworkPathOverride": "/usr/lib/mono/4.5/"
         }
     },
-    "isShellCommand": true,
     "args": [],
     "tasks": [
         {
-            "taskName": "build",
-            "args": [ "/p:NUNITLITE=1", "src/ServiceStack.Azure.sln"],
-            "isBuildCommand": true,
-            "showOutput": "silent",
-            "problemMatcher": "$msCompile"
+            "label": "build",
+            "type": "shell",
+            "command": "dotnet",
+            "args": [
+                "build",
+                "/p:NUNITLITE=1",
+                "src/ServiceStack.Azure.sln"
+            ],
+            "problemMatcher": "$msCompile",
+            "group": {
+                "_id": "build",
+                "isDefault": false
+            }
         }
     ]
 }
