--- a/src/ServiceStack.Azure/ServiceStack.Azure.Source.csproj
+++ b/src/ServiceStack.Azure/ServiceStack.Azure.Source.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageId>ServiceStack.Azure</PackageId>
     <AssemblyName>ServiceStack.Azure</AssemblyName>
-    <TargetFrameworks>net472;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
     <Title>ServiceStack integration for Azure Services</Title>
     <PackageDescription>
       ServiceStack integration for Azure Services in Azure and Windows ServiceBus, 
@@ -16,17 +16,17 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\ServiceStack\src\ServiceStack\ServiceStack.Source.csproj" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-    <PackageReference Include="System.Linq.Async" Version="4.1.1" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
-    <PackageReference Include="WindowsAzure.ServiceBus" Version="6.0.3" />
-    <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.1.0" />
-    <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
+    <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
+    <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
